<resources>
    <string name="app_name">Mail</string>
    <string name="abc">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ</string>
    <string name="hint_message">Введите сообщение</string>
    <string name="send_button">send</string>
    <string name="login_eText">Введите логин</string>
    <string name="password_eText">Введите пароль</string>
    <string name="remember">запомнить</string>
    <string name="login_button">Войти</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="name_eText">Придумайте имя</string>
    <string name="reg_login_eText">Придумайте логин</string>
    <string name="reg_pass_eText">Придумайте пароль</string>
    <string name="reg_warning">Используйте только символы латинского и русского алфавита и цифры!!!</string>
</resources>
